--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule "nerdtree"]
-    path = bundle/nerdtree
-    url = https://github.com/scrooloose/nerdtree.git
+[submodule "bundle/command-t"]
+	path = bundle/command-t
+	url = https://github.com/wincent/command-t.git
+[submodule "/Users/joshuakimble/.vim/bundle/nerdtree"]
+	path = /Users/joshuakimble/.vim/bundle/nerdtree
+	url = https://github.com/scrooloose/nerdtree.git
